# KalangoRTOS

./: CMakeLists.txt
archs/: arch_armv6m.c  arch_armv7m.c
ext/: CMakeLists.txt
utils/: CMakeLists.txt
